add multiple endpoint
