# docs/deuna-rickandmorty-openapi.json
@@ -53,6 +53,56 @@
                 }
             }
         },
+        "/episodes/multiple": {
+            "get": {
+                "description": "get multiple episodes by ids",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "episodes"
+                ],
+                "summary": "Get multiple episodes by ids",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "episode ids delimited with comma ,",
+                        "name": "ids",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/deuna-rickandmorty-api_internal_episode.Episode"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/episodes/{id}": {
             "get": {
                 "description": "get episode by id",
